--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="container">
     <h1>My Websites</h1>
 
-    <a href="https://yourmainwebsite.com" target="_blank">Main Website</a>
+    <a href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">Amhooman Games</a>
     <a href="https://youtubesite.com" target="_blank">YouTube Site</a>
     <a href="https://discordsite.com" target="_blank">Discord Site</a>
     <a href="https://yourgithubusername.github.io" target="_blank">GitHub Pages</a>
