--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1>My Websites</h1>
 
     <a href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">Amhooman Games</a>
-    <a href="https://youtubesite.com" target="_blank">YouTube Site</a>
+    <a href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">A Small World Cup</a>
     <a href="https://discordsite.com" target="_blank">Discord Site</a>
     <a href="https://yourgithubusername.github.io" target="_blank">GitHub Pages</a>
     <a href="https://whateverelse.com" target="_blank">Other Site</a>
