--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">Amhooman Games</a>
     <a href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">A Small World Cup</a>
     <a href="https://codingiscool464.github.io/polytrack/" target="_blank">PolyTrack</a>
-    <a href="https://codingiscool464.github.io/bitlife/" target="_blank">BitLife</a>/
+    <a href="https://codingiscool464.github.io/bitlife/" target="_blank">BitLife</a>
     <a href="https://whateverelse.com" target="_blank">Other Site</a>
 
   </div>
