--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Game Hub</title>
+  <title>Game Launcher</title>
   <style>
     :root {
       --bg: #0b0e14;
@@ -103,7 +103,7 @@
     <p class="header-sub">Click a game to play!</p>
 
     <a class="game-card" href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">
-      <div class="game-thumb" style="background-image:url('https://via.placeholder.com/80');"></div>
+      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1208.png?raw=true');"></div>
       <div class="game-info">
         <h2>Amhooman Games</h2>
         <p>Browser • Multi-game arcade</p>
@@ -111,7 +111,7 @@
     </a>
 
     <a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">
-      <div class="game-thumb" style="background-image:url('https://via.placeholder.com/80');"></div>
+      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1209.png?raw=true');"></div>
       <div class="game-info">
         <h2>A Small World Cup</h2>
         <p>Physics • Soccer • Funny</p>
@@ -119,7 +119,7 @@
     </a>
 
     <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
-      <div class="game-thumb" style="background-image:url('https://via.placeholder.com/80');"></div>
+      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1210.jpeg?raw=true');"></div>
       <div class="game-info">
         <h2>PolyTrack</h2>
         <p>Racing • Skill • Browser</p>
@@ -127,7 +127,7 @@
     </a>
 
     <a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
-      <div class="game-thumb" style="background-image:url('https://via.placeholder.com/80');"></div>
+      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1211.jpeg?raw=true');"></div>
       <div class="game-info">
         <h2>BitLife</h2>
         <p>Life Simulator • Decisions</p>
