--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1208.png?raw=true');"></div>
       <div class="game-info">
         <h2>Amhooman Games</h2>
-        <p>Browser • Multi-game arcade</p>
+        <p>Multi-game arcade • Search bar</p>
       </div>
     </a>
 
@@ -179,7 +179,7 @@
     <a class="game-card" href="https://codingiscool464.github.io/eggycar/" target="_blank" style="animation-delay: 0.8s;">
       <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1212.jpeg?raw=true');"></div>
       <div class="game-info">
-        <h2>EggyCar</h2>
+        <h2>Eggy Car</h2>
         <p>Racing • Arcade • Browser</p>
       </div>
     </a>
