--- a/index.html
+++ b/index.html
@@ -47,7 +47,26 @@
     p.header-sub {
       text-align: center;
       opacity: 0.75;
-      margin-bottom: 35px;
+      margin-bottom: 25px;
+    }
+
+    #search {
+      width: 100%;
+      padding: 14px;
+      margin-bottom: 25px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      background: #161b22;
+      border: 1px solid #2c3440;
+      color: var(--text);
+      font-size: 1rem;
+      transition: 0.25s ease;
+    }
+
+    #search:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 9px rgba(0, 209, 255, 0.4);
     }
 
     .game-card {
@@ -60,7 +79,6 @@
       text-decoration: none;
       color: var(--text);
       transition: 0.25s ease;
-      box-shadow: 0 0 0 transparent;
       align-items: center;
       opacity: 0;
       transform: translateY(8px);
@@ -111,6 +129,8 @@
   <div class="container">
     <h1>Game Launcher</h1>
     <p class="header-sub">Click a game to play!</p>
+
+    <input type="text" id="search" placeholder="Search games...">
 
     <a class="game-card" href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank" style="animation-delay: 0.10s;">
       <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1208.png?raw=true');"></div>
@@ -169,5 +189,19 @@
     </a>
 
   </div>
+
+  <script>
+    const search = document.getElementById("search");
+    const cards = document.querySelectorAll(".game-card");
+
+    search.addEventListener("input", () => {
+      const term = search.value.toLowerCase();
+
+      cards.forEach(card => {
+        const name = card.querySelector("h2").innerText.toLowerCase();
+        card.style.display = name.includes(term) ? "flex" : "none";
+      });
+    });
+  </script>
 </body>
 </html>
