--- a/index.html
+++ b/index.html
@@ -47,26 +47,19 @@
     p.header-sub {
       text-align: center;
       opacity: 0.75;
-      margin-bottom: 25px;
+      margin-bottom: 20px;
     }
 
     #search {
       width: 100%;
-      padding: 14px;
-      margin-bottom: 25px;
-      border-radius: 10px;
+      padding: 12px 16px;
+      border-radius: 8px;
       border: none;
       outline: none;
-      background: #161b22;
-      border: 1px solid #2c3440;
-      color: var(--text);
       font-size: 1rem;
-      transition: 0.25s ease;
-    }
-
-    #search:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 9px rgba(0, 209, 255, 0.4);
+      margin-bottom: 25px;
+      background: #11141b;
+      color: var(--text);
     }
 
     .game-card {
@@ -79,16 +72,25 @@
       text-decoration: none;
       color: var(--text);
       transition: 0.25s ease;
+      box-shadow: 0 0 0 transparent;
       align-items: center;
-      opacity: 0;
-      transform: translateY(8px);
-      animation: cardFade 0.45s ease forwards;
+      opacity: 1;
+      transform: scale(1);
     }
 
     .game-card:hover {
       background: var(--card-hover);
       transform: scale(1.03);
       box-shadow: 0px 0px 14px rgba(0, 209, 255, 0.4);
+    }
+
+    /* ✅ Disabled animations when searching */
+    .no-anim .game-card {
+      transition: none !important;
+      animation: none !important;
+      transform: none !important;
+      box-shadow: none !important;
+      opacity: 1 !important;
     }
 
     .game-thumb {
@@ -116,13 +118,6 @@
       from { opacity: 0; transform: translateY(6px); }
       to   { opacity: 1; transform: translateY(0); }
     }
-
-    @keyframes cardFade {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
   </style>
 </head>
 <body>
@@ -132,59 +127,59 @@
 
     <input type="text" id="search" placeholder="Search games...">
 
-    <a class="game-card" href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank" style="animation-delay: 0.10s;">
-      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1208.png?raw=true');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1208.png');"></div>
       <div class="game-info">
         <h2>Amhooman Games</h2>
         <p>Browser • Multi-game arcade</p>
       </div>
     </a>
 
-    <a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank" style="animation-delay: 0.25s;">
-      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1209.png?raw=true');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1209.png');"></div>
       <div class="game-info">
         <h2>A Small World Cup</h2>
         <p>Physics • Soccer • Funny</p>
       </div>
     </a>
 
-    <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank" style="animation-delay: 0.40s;">
-      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1210.jpeg?raw=true');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
       <div class="game-info">
         <h2>PolyTrack</h2>
         <p>Racing • Skill • Browser</p>
       </div>
     </a>
 
-    <a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank" style="animation-delay: 0.55s;">
-      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1211.jpeg?raw=true');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/bitlife/" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1211.jpeg');"></div>
       <div class="game-info">
         <h2>BitLife</h2>
         <p>Life Simulator • Decisions</p>
       </div>
     </a>
 
-    <a class="game-card" href="https://codingiscool464.github.io/eggycar/" target="_blank" style="animation-delay: 0.70s;">
-      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1212.jpeg?raw=true');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/eggycar/" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1212.jpeg');"></div>
       <div class="game-info">
         <h2>Eggy Car</h2>
-        <p>Driving • Hill Climb</p>
+        <p>Car • Hill Climb • Balance</p>
       </div>
     </a>
 
-    <a class="game-card" href="https://codingiscool464.github.io/fnaf/" target="_blank" style="animation-delay: 0.85s;">
-      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1213.jpeg?raw=true');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/fnaf/" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1213.jpeg');"></div>
       <div class="game-info">
         <h2>FNAF</h2>
-        <p>Horror • Strategy • Classic</p>
+        <p>Horror • Cameras • Survive</p>
       </div>
     </a>
 
-    <a class="game-card" href="https://codingiscool464.github.io/ragdoll-archers/" target="_blank" style="animation-delay: 1.00s;">
-      <div class="game-thumb" style="background-image:url('http://github.com/codingiscool464/codingiscool464.github.io/blob/main/IMG_1215.webp?raw=true');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/ragdoll-archers/" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1215.webp');"></div>
       <div class="game-info">
         <h2>Ragdoll Archers</h2>
-        <p>Physics • Archery • PvP</p>
+        <p>Bow Combat • Physics</p>
       </div>
     </a>
 
@@ -193,13 +188,17 @@
   <script>
     const search = document.getElementById("search");
     const cards = document.querySelectorAll(".game-card");
+    const container = document.querySelector(".container");
 
     search.addEventListener("input", () => {
-      const term = search.value.toLowerCase();
+      const value = search.value.toLowerCase();
+
+      // Disable animations while searching
+      container.classList.add("no-anim");
 
       cards.forEach(card => {
-        const name = card.querySelector("h2").innerText.toLowerCase();
-        card.style.display = name.includes(term) ? "flex" : "none";
+        const name = card.querySelector("h2").textContent.toLowerCase();
+        card.style.display = name.includes(value) ? "flex" : "none";
       });
     });
   </script>
