--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       box-shadow: 0px 0px 14px rgba(0, 209, 255, 0.4);
     }
 
-    /* ✅ Disabled animations when searching */
+    /* Disable animations while searching */
     .no-anim .game-card {
       transition: none !important;
       animation: none !important;
@@ -127,13 +127,7 @@
 
     <input type="text" id="search" placeholder="Search games...">
 
-    <a class="game-card" href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">
-      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1208.png');"></div>
-      <div class="game-info">
-        <h2>Amhooman Games</h2>
-        <p>Browser • Multi-game arcade</p>
-      </div>
-    </a>
+    <!-- Alphabetized A-Z by game title -->
 
     <a class="game-card" href="https://codingiscool464.github.io/a-small-world-cup/" target="_blank">
       <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1209.png');"></div>
@@ -143,11 +137,11 @@
       </div>
     </a>
 
-    <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
-      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
+    <a class="game-card" href="https://codingiscool464.github.io/maingames/games/index.html" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1208.png');"></div>
       <div class="game-info">
-        <h2>PolyTrack</h2>
-        <p>Racing • Skill • Browser</p>
+        <h2>Amhooman Games</h2>
+        <p>Browser • Multi-game arcade</p>
       </div>
     </a>
 
@@ -175,11 +169,27 @@
       </div>
     </a>
 
+    <a class="game-card" href="https://codingiscool464.github.io/polytrack/" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1210.jpeg');"></div>
+      <div class="game-info">
+        <h2>PolyTrack</h2>
+        <p>Racing • Skill • Browser</p>
+      </div>
+    </a>
+
     <a class="game-card" href="https://codingiscool464.github.io/ragdoll-archers/" target="_blank">
       <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1215.webp');"></div>
       <div class="game-info">
         <h2>Ragdoll Archers</h2>
         <p>Bow Combat • Physics</p>
+      </div>
+    </a>
+
+    <a class="game-card" href="https://codingiscool464.github.io/run3/game" target="_blank">
+      <div class="game-thumb" style="background-image:url('https://raw.githubusercontent.com/codingiscool464/codingiscool464.github.io/main/IMG_1216.jpeg');"></div>
+      <div class="game-info">
+        <h2>Run 3</h2>
+        <p>Endless Runner • Platformer</p>
       </div>
     </a>
 
